mobile app developers z-index issue solve

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2508,7 +2508,7 @@ input::-webkit-inner-spin-button {
   position: fixed;
   bottom: 0;
   left: 0;
-  z-index: 99999999999;
+  z-index: 999 ;
   margin-left: 1rem;
   margin-bottom: 1rem;
 }
